other-works__projects 改為一個ul

--- a/index.html
+++ b/index.html
@@ -73,46 +73,40 @@
                     <h2 class="other-works__title heading-2">Other Works</h2>
                     <p class="paragraph-md-20-30">2016-2020 年累積的作品<br>海報/廣告/攝影/LOGO/3D</p>
                 </div>
-                <div class="projects">
-                    <ul class="projects-list1">
-                        <li>
-                            <img src="img/work_img1.png" alt="work1">
-                            <p class="paragraph-md-20-42">海報設計/2017</p>
-                        </li>
-                        <li>
-                            <img src="img/work_img2.png" alt="work2">
-                            <p class="paragraph-md-20-42">海報設計/2018</p>
-                        </li>
-                        <li>
-                            <img src="img/work_img3.png" alt="work3">
-                            <p class="paragraph-md-20-42">海報設計/2018</p>
-                        </li>
-                    </ul>
-                    <ul class="projects-list2">
-                        <li>
-                            <img src="img/work_img4.png" alt="work4">
-                            <p class="paragraph-md-20-42">概念攝影/2018</p>
-                        </li>
-                        <li>
-                            <img src="img/work_img5.png" alt="work5">
-                            <p class="paragraph-md-20-42">概念攝影/2018</p>
-                        </li>
-                    </ul>
-                    <ul class="projects-list3">
-                        <li>
-                            <img src="img/work_img6.png" alt="work6">
-                            <p class="paragraph-md-20-42">sasa 酒標設計/2019</p>
-                        </li>
-                        <li>
-                            <img src="img/work_img7.png" alt="work7">
-                            <p class="paragraph-md-20-42">攝影創作/2018</p>
-                        </li>
-                        <li>
-                            <img src="img/work_img8.png" alt="work8">
-                            <p class="paragraph-md-20-42">官網設計/2020</p>
-                        </li>
-                    </ul>
-                </div>
+                <ul class="other-works__projects">
+                    <li>
+                        <img src="img/work_img1.png" alt="work1">
+                        <p class="paragraph-md-20-42">海報設計/2017</p>
+                    </li>
+                    <li>
+                        <img src="img/work_img2.png" alt="work2">
+                        <p class="paragraph-md-20-42">海報設計/2018</p>
+                    </li>
+                    <li>
+                        <img src="img/work_img3.png" alt="work3">
+                        <p class="paragraph-md-20-42">海報設計/2018</p>
+                    </li>
+                    <li>
+                        <img src="img/work_img4.png" alt="work4">
+                        <p class="paragraph-md-20-42">概念攝影/2018</p>
+                    </li>
+                    <li>
+                        <img src="img/work_img5.png" alt="work5">
+                        <p class="paragraph-md-20-42">概念攝影/2018</p>
+                    </li>
+                    <li>
+                        <img src="img/work_img6.png" alt="work6">
+                        <p class="paragraph-md-20-42">sasa 酒標設計/2019</p>
+                    </li>
+                    <li>
+                        <img src="img/work_img7.png" alt="work7">
+                        <p class="paragraph-md-20-42">攝影創作/2018</p>
+                    </li>
+                    <li>
+                        <img src="img/work_img8.png" alt="work8">
+                        <p class="paragraph-md-20-42">官網設計/2020</p>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
